# iber_base

./: README.md
gdal_utils/interpolate/: CMakeLists.txt  bilineal.cpp  bilineal.hpp  main.cpp
gdal_utils/interpolate/tests/: rio_negro_CM_2.geo  rio_negro_CM_2.msh  rio_negro_CM_2.stl
gdal_utils/python/: con_numpy.py
qiber/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qiber.pro  scene.cpp  scene.h  vertex.cpp  vertex.h
qiber/tests/: tests.pro  testvertex.cpp
